--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
+<script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <html ng-app="app" lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Angular App</title>
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <base href="/">
 </head>
 <body>
-  <app></app>
+  <map>
+</map>
+   <mapa>
+</mapa>
+  <p id="add-to-bag">fffff</p>
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADH4rRO4yAldfO3tjf9V_77X2vP0OUlzY&libraries=visualization">
+</script>
 </body>
+
 </html>
